# opensloth

./: .gitignore  CLI_ALIAS_ENHANCEMENT_SUMMARY.md  CLI_MODERNIZATION.md  CLI_README.md  CLI_UNIFICATION_COMPLETE.md  GRPO_IMPLEMENTATION_SUMMARY.md  MEMORY_FIXES.md  MULTI_TRAINING_SUPPORT.md  README.md  UNIFIED_CLI_IMPLEMENTATION.md  debug_function.py  demo_alias_system.py  demo_cli_aliases.py  demo_refactoring_benefits.py  demo_script_generation.py  install.sh  prepare_qwen_dataset.py  pyproject.toml  run_single_gpu_dpo_sim.py  test.py  test_callback.py  test_callback_fix.py  test_comprehensive_logging.py  test_dpo_implementation.py  test_grpo_improvements.py  test_grpo_integration.py  test_logging_interception.py  test_preset_loading.py  test_refactoring_integration.py  test_single_gpu.py  test_smart_aggregation.py  test_tmux_worker.sh  train.py  train.sh
HyperSloth/: hp_trainer_setup.py
docs/: CLI_USAGE.md  DPO_TRAINING.md  GRPO_TRAINING.md  GRPO_UNSLOTH.md
examples/: sft_vs_dpo_comparison.py  train_cfg.py
grpo_tutorial/: MIGRATION_SUMMARY.md  QUICKSTART.md  README.md
grpo_tutorial/scripts/: 00_prepare_sft_dataset.sh  01_sft_end_to_end.sh  01_train_sft.sh  02_grpo_end_to_end.sh  02_prepare_grpo_dataset.sh  03_train_grpo.sh  prepare_sft_data.py  test_final_model.py
prepare_dataset/: app_gradio.py  base_dataset_preparer.py  config_printer.py  config_schema.py  create_grpo_test_dataset.py  prepare_dpo_dataset.py  prepare_gemma.py  prepare_grpo.py  prepare_grpo_dataset.py  prepare_qwen.py  prepare_qwen_local_chatlm_dataset.py  run_prep_job.py  run_train_job.py  utils.py
prepare_dataset/presets/data/: gemma_finetome.json  qwen_finetome.json
schemas/: README.md  training_config.schema.json
scripts/: gen_gemma_dataset.sh  gen_llama_dataset.sh  gen_qwen_dataset.sh  generate_schema.py  regenerate_schema.fish  save_fp8.py  train_qwen_dataset.sh  unsloth_qwen3_minimal.py  vscode-launch-debug.sh
scripts/unsloth/: qwen3_minimal.py
src/async-grpo/: .gitignore  EXAMPLES.md  QUICKSTART.md  README.md  pyproject.toml  remove_files.py  requirements.txt  rewards.py  run.ipynb  train.ipynb
src/async-grpo/.github/: copilot-instructions.md
src/async-grpo/docs/: file_lifecycle_documentation.md  minimal_grpo.md
src/async-grpo/exps/: embeding_dedup.py
src/async-grpo/scripts/: run_worker.sh
src/async-grpo/src/app/: trainer_setup_gsmk.py
src/async-grpo/src/async_grpo_ipc/: __init__.py  ipc.py  process_tensors.py
src/async-grpo/src/cli/: parameter_server.py  show_board.py  train.py  worker.py
src/async-grpo/src/rewards/: __init__.py
src/async-grpo/src/utils/: __init__.py  atomic_file_ops.py  filesystem.py  job_queue.py  lock.py  logger.py  performance.py  ps_utils.py  templates.py  worker_utils.py
src/opensloth/: __init__.py  _debug_dataloader.py  api.py  grpo_rewards.py  init_modules.py  logging_config.py  memory_monitor.py  nccl_grad_sync.py  opensloth_config.py  opensloth_trainer_setup.py  trainer_factory.py  trainer_factory.py.bk  unsloth_grpo_trainer.py
src/opensloth/cli/: autogen.py  main.py  main_fixed.py  os_data.py  os_dpo.py  os_dpo_new.py  os_dpo_old.py  os_grpo.py  os_grpo_new.py  os_grpo_old.py  os_sft.py  os_train.py  params.py
src/opensloth/comm/: async_ps.py
src/opensloth/config/: builder.py
src/opensloth/dataset/: README.md  __init__.py  base_dataset_preparer.py  config_schema.py  prepare_gemma.py  prepare_grpo.py  prepare_qwen.py  prepare_qwen_local_chatlm_dataset.py  run_prep_job.py  run_train_job.py  utils.py
src/opensloth/dataset/presets/: README.md
src/opensloth/datasets_utils/: __init__.py  qwen_dataset_utils.py
src/opensloth/examples/: README.md  __init__.py  qwen_configs.py
src/opensloth/patching/: __init__.py  gemma.py  get_batch_samples.py  inner_training_loop.py  patch_log.py  patch_log_for_multi_gpu.py  patch_sampler.py
src/opensloth/scripts/: dataset_cli.py  dataset_cli_simple.py  dataset_cli_typer.py  opensloth_sft_trainer.py  opensloth_trainer.py  prepare_dataset.py  tmux_train_worker.py  tmux_worker.py  train.py  train_cli.py  train_cli_simple.py  train_cli_typer.py  train_only.py  unified_cli.py
src/opensloth/trainer_factory/: __init__.py  base.py  constructors.py  dispatcher.py  model_init.py  opensloth_trainer.py
src/opensloth/training/: __init__.py  grpo_rewards_math.py
test_output/shard_0/: data-00000-of-00001.arrow
tests/: smart_partition.py  test_debug_dataloader_markdown.py  test_weight.py
train_scripts/: train_benchmark.py  train_dpo_example.py  train_gemma.py  train_grpo_qwen.py  train_grpo_unsloth.py  train_qwen.py
trainer_output/generated_scripts/: test_run.py
