[project]
name = "opensloth"
version = "0.1.8"
description = "A high-performance framework for fine-tuning large language models with multi-GPU support"
authors = [{ name = "anhvth", email = "anhvth.226@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
    requires-python = ">=3.10,<3.11"
keywords = [
    "machine learning",
    "deep learning",
    "transformers",
    "fine-tuning",
    "multi-gpu",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "jupyterlab (>=4.3.5,<5.0.0)",
    "fastcore (>=1.7.29,<2.0.0)",
    "speedy-utils (>=0.1.20,<0.2.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "tensorboardx (>=2.6.2.2,<3.0.0.0)",
    "ruff (>=0.12.8,<0.13.0)",
    "unsloth (>=2025.8.1,<2026.0.0)",
    "pydantic (>=2.8.0,<3.0.0)",
    "gradio (>=4.44.0,<5.0.0)",
    "tabulate (>=0.9.0,<1.0.0)",
    "typer (>=0.16.0,<0.17.0)",
]

[project.urls]
Homepage = "https://github.com/anhvth/opensloth"
Repository = "https://github.com/anhvth/opensloth"
Documentation = "https://github.com/anhvth/opensloth"
"Bug Tracker" = "https://github.com/anhvth/opensloth/issues"

[project.scripts]

os = "opensloth.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "opensloth"
packages = [{ include = "opensloth", from = "src" }]


[tool.ruff]
line-length = 120
exclude = [
    "__pycache__",
    "build",
    "dist",
    "unsloth_compiled_cache",
    "outputs",
    "trainer_output",
    "sparse_logs",
    "*.ipynb",
    "tests/",
]
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E501",  # line too long (handled by line-length)
    "E203",  # whitespace before ':' (black compatibility)
    "W291",  # trailing whitespace
    "W293",  # blank line contains whitespace
    "F403",  # 'from module import *' used; unable to detect undefined names
    "F405",  # name may be undefined, or defined from star imports
    "PLC0415",  # import should be at the top-level of a file (deliberate in this project)
    "PLR0913", # Too many arguments (function has 4 positional arguments, but 3 are allowed)
]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TID", "ARG", "PL", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
